# NCSIOverride

./: .gitmodules  CMakeLists.txt  README.md  Update-Offset.ps1  fuckncsi.cpp  fuckncsi.h  install.reg  shim.c  shim.def  shim_declare.h  shim_declare.inc  shim_masm.asm  shim_nasm.asm
.github/workflows/: ci-build.yml
detours/: CMakeLists.txt
